--- a/Lora_Trainer_XL_FLOWRL.ipynb
+++ b/Lora_Trainer_XL_FLOWRL.ipynb
@@ -86,7 +86,7 @@
         "#except:\n",
         "#  LOWRAM = True\n",
         "\n",
-        "COMMIT = \"5a18a03ffcc2a21c6e884a25d041076911a79a2a\"#\"47ef6ed843ee1951cd07838c5fdcca60c954130c\"\n",
+        "COMMIT = \"5a18a03ffcc2a21c6e884a25d041076911a79a2a\"\n",
         "LOWRAM = True\n",
         "LOAD_TRUNCATED_IMAGES = True\n",
         "BETTER_EPOCH_NAMES = True\n",
